# wireframe

./: .gitignore  .goreleaser.yml  .markdownlint-cli2.jsonc  .rustfmt.toml  AGENTS.md  CHANGELOG.md  Cargo.toml  EFFICIENCY_REPORT.md  LICENSE  Makefile  README.md  build.rs  clippy.toml  rust-toolchain.toml  typos.local.toml  typos.toml
.github/: dependabot.yml
.github/workflows/: advanced-tests.yml  ci.yml  coverage-main.yml  coverage.yml  delayed-pr-comment.yml  dependabot-automerge.yml  get-codescene-sha.yml  mutation-testing.yml  release.yml
benches/: codec_performance.rs  codec_performance_alloc.rs
crates/wireframe-verification/: Cargo.toml
docs/: adr-001-multi-packet-streaming-response-api.md  adr-001-replace-cucumber-with-rstest-bdd.md  adr-002-streaming-requests-and-shared-message-assembly.md  adr-003-replace-cucumber-with-rstest-bdd.md  adr-004-pluggable-protocol-codecs.md  adr-005-serializer-abstraction.md  adr-006-test-observability.md  adr-007-mutation-testing-with-cargo-mutants.md  adr-008-zero-copy-public-byte-container.md  adr-009-vec-u8-migration-rollout.md  adr-010-transport-frame-boundary-for-zero-copy.md  api.md  asynchronous-outbound-messaging-design.md  asynchronous-outbound-messaging-roadmap.md  behavioural-testing-in-rust-with-cucumber.md  builder-pattern-conventions.md  cli.md  complexity-antipatterns-and-refactoring-strategies.md  contents.md  developers-guide.md  documentation-style-guide.md  efficiency-report.md  formal-verification-methods-in-wireframe.md  frame-metadata.md  frame-vec-u8-inventory.md  generic-message-fragmentation-and-re-assembly-design.md  hardening-wireframe-a-guide-to-production-resilience.md  message-versioning.md  mocking-network-outages-in-rust.md  multi-layered-testing-strategy.md  multi-packet-and-streaming-responses-design.md  observability-operability-and-maturity.md  preamble-validator.md  reliable-testing-in-rust-via-dependency-injection.md  roadmap.md  rstest-bdd-users-guide.md  rust-binary-router-library-design.md  rust-doctest-dry-guide.md  rust-testing-with-rstest-fixtures.md  the-road-to-wireframe-1-0-feature-set-philosophy-and-capability-maturity.md  (+8 more)
docs/adr/: 0002-streaming-requests-and-shared-message-assembly.md
docs/execplans/: 1-5-1-tenant-primitives-and-request-context-plumbing.md  10-1-1-approve-stable-public-byte-container.md  10-1-1-convert-root-manifest-into-hybrid-workspace.md  10-1-2-approve-vec-u8-compatibility-and-rollout-policy-for-downstream-users.md  10-1-3-approve-actor-and-codec-driver-boundary.md  10-2-1-client-message-api.md  10-2-2-client-decode-and-transport-failures.md  10-3-1-client-response-stream-and-response-multipacket.md  10-3-2-exercise-interleaved-queues.md  10-4-1-client-documentation-and-examples.md  11-1-1-outgoing-request-middleware-hooks.md  11-1-2-structured-logging-and-tracing-spans.md  11-2-1-configurable-connection-pool-preserveing-preamble.md  11-2-1-configurable-connection-pool-preserving-preamble.md  11-2-2-expose-pool-handle-api.md  11-3-1-helpers-for-consuming-streaming-responses.md  11-4-2-troubleshooting-section.md  12-3-2-in-process-server-and-client-pair-test-harness.md  15-1-1-convert-root-manifest-into-hybrid-workspace.md  15-1-2-wireframe-verification-crate.md  15-1-3-kani-and-verus-metadata-plus-scripts.md  15-1-4-formal-verification-makefile-targets.md  16-2-1-client-message-api.md  16-2-2-client-decode-and-transport-failures.md  16-3-1-client-response-stream-and-response-multipacket.md  16-3-2-exercise-interleaved-queues.md  16-4-1-client-documentation-and-examples.md  17-1-1-outgoing-request-middleware-hooks.md  17-1-2-structured-logging-and-tracing-spans.md  17-2-1-configurable-connection-pool-preserving-preamble.md  17-2-2-expose-pool-handle-api.md  17-4-2-troubleshooting-section.md  (+41 more)
examples/: async_stream.md  async_stream.rs  client_echo_login.rs  echo.rs  hotline_codec.rs  metadata_routing.rs  multi_packet.md  multi_packet.rs  mysql_codec.rs  packet_enum.rs  ping_pong.md  ping_pong.rs  resp_codec.rs
physics/: physics.dl
scripts/: doctest-benchmark.sh  typos_rollout_check.py
src/: app.rs  app_data_store.rs  byte_order.rs  cli.rs  codec.rs  config.rs  connection.rs  correlation.rs  error.rs  extractor.rs  fairness.rs  frame.rs  hooks.rs  lib.rs  main.rs  message.rs  metrics.rs  middleware.rs  panic.rs  preamble.rs  prelude.rs  push.rs  request.rs  response.rs  rewind_stream.rs  serializer.rs  server.rs  session.rs  test_helpers.rs
tests/: app_data.rs  async_stream.rs  client_lifecycle.rs  client_pair_harness.rs  client_preamble.rs  client_runtime.rs  codec_error.rs  codec_fixtures.rs  codec_performance_benchmark_helpers.rs  codec_test_harness.rs  compile_error.rs  connection.rs  connection_actor.rs  connection_actor_errors.rs  connection_actor_fairness.rs  connection_actor_shutdown.rs  connection_fragmentation.rs  correlation_cucumber.rs  correlation_id.rs  correlation_world.rs  cucumber.rs  error_display.rs  example_codecs.rs  extractor.rs  formal_tooling.rs  fragment_transport.rs  frame_codec.rs  interleaved_push_queues.rs  lifecycle.rs  metadata.rs  metrics.rs  middleware.rs  middleware_order.rs  multi_packet.rs  multi_packet_streaming.rs  packet_parts.rs  partial_frame_feeding.rs  preamble.rs  push.rs  push_policies.rs  (+24 more)
wireframe_testing/: Cargo.toml  README.md
wireframe_testing/src/: client_pair.rs  echo_server.rs  helpers.rs  integration_helpers.rs  lib.rs  logging.rs  macros.rs  multi_packet.rs  observability.rs
wireframe_testing/src/codec_benchmarks/: codec_alloc_benchmark_support.rs  codec_benchmark_support.rs  codec_fragmentation_benchmark_support.rs  mod.rs
wireframe_testing/src/helpers/: codec.rs  codec_drive.rs  codec_ext.rs  codec_fixtures.rs  drive.rs  fragment_drive.rs  partial_frame.rs  payloads.rs  runtime.rs  slow_io.rs
wireframe_testing/src/helpers/tests/: helper_tests.rs  mod.rs
wireframe_testing/src/observability/: assertions.rs  labels.rs  mod.rs
wireframe_testing/src/reassembly/: assert_helpers.rs  fragment.rs  message.rs  message_error.rs  mod.rs
wireframe_testing/tests/: integration_helpers.rs
(+528 files in other folders)
