[package]
name = "wireframe"
version = "0.1.0"
edition = "2024"
description = "An experimental Rust library that simplifies building servers and clients for custom binary protocols."
license = "ISC"
repository = "https://github.com/leynos/wireframe"
readme = "README.md"
keywords = ["async", "networking", "binary-protocol", "protocol", "tokio"]
categories = ["network-programming", "asynchronous"]
documentation = "https://docs.rs/wireframe"

[package.metadata.docs.rs]
features = ["metrics"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
bincode = "2.0.1"
tokio = { version = "1.47.1", default-features = false, features = [
    "net",
    "signal",
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
    "io-util",
] }
tokio-util = { version = "0.7.16", features = ["rt", "codec"] }
futures = "0.3.31"
async-trait = "0.1.88"
bytes = "1.10.1"
log = "0.4.27"
dashmap = "6.1.0"
leaky-bucket = "1.1.2"
tracing = { version = "0.1.41", features = ["log", "log-always"] }
tracing-subscriber = "0.3"
metrics = { version = "0.24.2", optional = true }
metrics-exporter-prometheus = { version = "0.17.2", optional = true, features = ["http-listener"] }
thiserror = "2.0.12"
static_assertions = "1"

[dev-dependencies]
rstest = "0.26.1"
wireframe_testing = { path = "./wireframe_testing" }
logtest = "2.0.0"
proptest = "1.7.0"
loom = "0.7.2"
async-stream = "0.3.6"
serial_test = "3.2.0"
# Permit compatible bug fixes but block breaking updates
cucumber = "0.21.1"
metrics-util = "0.20.0"
tracing-test = "0.2.5"
mockall = "0.13.1"

tokio = { version = "1.47.1", default-features = false, features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "time",
    "io-util",
    "net",
    "test-util",
] }

[features]
default = ["metrics"]
metrics = ["dep:metrics", "dep:metrics-exporter-prometheus"]
advanced-tests = []

[lints.clippy]
pedantic = "warn"

# The Cucumber test runner defines its own async main function,
# so the standard test harness must be disabled.
[[test]]
name = "cucumber"
harness = false
required-features = ["advanced-tests"]
