[package]
name = "wireframe_testing"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["macros", "rt", "io-util"] }
wireframe = { path = ".." }
bincode = "^2.0"
bytes = "^1.0"
rstest = "0.18.2"
logtest = "2"
log = "0.4"
metrics-util = "0.20"
futures = "0.3"
tokio-util = { version = "0.7", features = ["codec"] }
