[package]
name = "wireframe_testing"
version = "0.2.0"
edition = "2024"
description = "Helper utilities for exercising Wireframe applications in tests"
license = "ISC"
repository = "https://github.com/leynos/wireframe"
readme = "README.md"
keywords = ["async", "networking", "binary-protocol", "protocol", "tokio"]
categories = ["network-programming", "asynchronous"]
documentation = "https://docs.rs/wireframe_testing"

[dependencies]
tokio = { version = "1", features = ["macros", "rt", "io-util"] }
wireframe = { version = "0.2.0", path = ".." }
bincode = "^2.0"
bytes = "^1.0"
thiserror = "2.0.16"
rstest = "0.18.2"
logtest = "2"
log = "0.4"
metrics-util = "0.20"
futures = "0.3"
tokio-util = { version = "0.7", features = ["codec"] }
